--- a/MeshTool.uplugin
+++ b/MeshTool.uplugin
@@ -8,7 +8,7 @@
 	"CreatedBy": "CityColor",
 	"CreatedByURL": "https://www.bilibili.com/read/cv33880634/",
 	"DocsURL": "https://www.bilibili.com/read/cv33880634/",
-	"MarketplaceURL": "com.epicgames.launcher://ue/Fab/product/a71342d4a5df4b1d89ec09833418cd9e",
+	"MarketplaceURL": "com.epicgames.launcher://ue/Fab/product/",
 	"SupportURL": "",
 	"EngineVersion": "4.27.0",
 	"CanContainContent": false,
